tests-integration/tests/custom/syntax-errors/invalid-token/stderr.expected
Error:
    model.eprime:1:9:
  |
1 | find x: @int
  |         ^^^^
Skipped tokens

model.eprime:1:9:
  |
1 | find x: @int
  |         ^
Missing Domain


